fix: fixed overscroll problem
When scrolling too far up or down, the white body background was
visible. A temporary fix has been applied by which the overscroll
behavior is set to none in css.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,7 @@
   @include nb-theme-global();
 }
 /* You can add global styles to this file, and also import other style files */
+
+.no-scroll {
+  overscroll-behavior: none;
+}
